--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1909,7 +1909,17 @@ hr {
   color: #aee0f4;
 }
 
-.other_chap li:first-child {
+.other_chap .activeli{
+  background-color: #fff;
+  color: #5677D4;
+}
+
+.other_chap .activea{
+  background-color: #fff;
+  color: #5677D4;
+}
+
+/* .other_chap li:first-child {
   background-color: #fff;
   color: #5677D4;
 }
@@ -1917,7 +1927,7 @@ hr {
 .other_chap li:first-child a {
   background-color: #fff;
   color: #5677D4;
-}
+} */
 
 /*
 .other_chap li >a:first-child {
