--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -38,12 +38,12 @@
 
       <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a>
 
-      <!-- <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
+      <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
         <span style="color:white;">
             <i class="fa fa-mobile fa-3x" ></i> <br>
             <span id="otptxt">Send OTP</span>
           </span>
-      </div> -->
+      </div>
 
       <!-- <a href="/register" class="btn btn-success btn-block" style="margin-top:150px;">Register</a>
       <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
