--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -104,11 +104,13 @@
 
     <div flash-message="4000" style="position:fixed;top:70px;right:10px;z-index:9999;min-width:300px;"></div>
     {% verbatim %}
-    <div id="sideMenu" style="background:linear-gradient(100deg, #e9dddd 0%, #fff 51%, #fff 75%);width:{{sideMenuVisibility ? '13':'4'}}%;{{mobileView ? 'width:31%': ';'}};min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100;" class="sideMenuView" ng-include="sideMenu">
+    <div id="sideMenu" style="background:linear-gradient(100deg, #e9dddd 0%, #fff 51%, #fff 75%);width:7rem;min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100;" class="sideMenuView" ng-include="sideMenu">
     </div>
+    <!-- <div id="sideMenu" style="background:linear-gradient(100deg, #e9dddd 0%, #fff 51%, #fff 75%);width:{{sideMenuVisibility ? '13':'4'}}%;{{mobileView ? 'width:31%': ';'}};min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100;" class="sideMenuView" ng-include="sideMenu">
+    </div> -->
 
 
-    <div class="col-md-1 mainUIViewParent" id="mainUIParent" style="{{sideMenuVisibility ? 'width:87%': 'width:96%;'}};{{mobileView ? 'width:70%': ';'}}; padding:0px;right:0px;position:absolute;">
+    <div class="col-md-1 mainUIViewParent" id="mainUIParent" style="width:96%;padding:0px;left:7rem;position:absolute;">
     {% endverbatim %}
       <div ng-include="headerUrl"></div>
       <div id="mainUI" class="mainUIView" ui-view ng-if="modules.length>0">
