minor ui changes

--- a/PIM/static/css/app.calendar.css
+++ b/PIM/static/css/app.calendar.css
@@ -1,11 +1,12 @@
 
 .ngCalOptions >li >a:hover ,.ngCalOptions >li >a:focus , .highlighted , .inlistForm:hover {
-  background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;
+  /*background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;*/
+  border-right:4px solid red !important;
 }
 
 .ngCalOptions >li >a{
   text-decoration: none;
   box-sizing: border-box;
-  color: #fff;
+  /*color: #fff;*/
 
 }
