--- a/homepage/templates/tutorsFooter.html
+++ b/homepage/templates/tutorsFooter.html
@@ -1,4 +1,4 @@
-<footer ng-hide="$state.includes('chapter')">
+<footer>
   <div class="container-fluid no_padding" style="min-height:40vh;position:relative;">
     <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
     <img src="/static/images/24tut/r_side.png" class="bg on_right" width="10%">
