--- a/homepage/templates/tutorsSectionDetails.html
+++ b/homepage/templates/tutorsSectionDetails.html
@@ -1,7 +1,29 @@
 <div class="container-fluid" style="padding-left:0;padding-right:0;">
-  <div class="col-md-3 pull-right" style="background-image:linear-gradient(-179deg,#3b63d7,#edae2c);min-height:96vh;position:fixed;padding:0;left:0;:0;z-index:50;color:#fff;width:402px;">
+
+  <style media="screen">
+    footer{
+      width:75%;
+      margin-left:25%;
+    }
+  </style>
+
+  <style media="screen and (max-width:768px)">
+    footer{
+       width: 100%;
+       margin-left: 0px;
+     }
+   </style>
+
+  <!-- <style media="screen and (max-width:1352px)">
+    footer{
+          width: 76%;
+          margin-left: 20%;
+        }
+      </style> -->
+
+  <div class="col-md-3 pull-right leftSection_div hidden-xs hidden-sm">
     <div class="logoeffect">
-      <a href="/">  <img src="/static/images/24tut//icon_grad.svg" width="70%" ></a>
+      <a href="/"> <img src="/static/images/24tut/white24.png" width="70%"></a>
     </div>
     <div class="" style="background: rgba(0,0,0,.05);padding: 10px 15px;color: #fff;">
       <h4>OTHER CHAPTERS</h4>
@@ -9,64 +31,115 @@
     <div id="leftSection" class="" style="padding-left:0px;padding-right:0px;overflow: hidden;width:99%;">
       <ul class="list-unstyled other_chap">
         {% for sec in sections %}
-            {% if sectionobj.shortUrl == sec.shortUrl %}
-              <li id="activeli" class="activeli"><a class="activea" ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
-            {% else %}
-              <li><a ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
-            {% endif %}
+        {% if sectionobj.shortUrl == sec.shortUrl %}
+        <li id="activeli" class="activeli"><a class="activea" ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
+        {% else %}
+        <li><a ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
+        {% endif %}
         {% endfor %}
-
-        <!-- <li><a href="/chapter"><span>Introduction to Physics</span></a></li>
-        <li><a href="/chapter"><span>Physics and Mathematics</span></a></li>
-        <li><a href="/chapter"><span>Rest and Motion Kinematics</span></a></li>
-        <li><a href="/chapter"><span>The Forces</span></a></li>
-        <li><a href="/chapter"><span>Newton's Laws of Motion</span></a></li>
-        <li><a href="/chapter"><span>Friction</span></a></li>
-        <li><a href="/chapter"><span>Circular Motion</span></a></li>
-        <li><a href="/chapter"><span>Work and Energy</span></a></li>
-        <li><a href="/chapter"><span>Centre of Mass, Linear Momentum, Collision</span></a></li>
-        <li><a href="/chapter"><span>Rotational Mechanics</span></a></li>
-        <li><a href="/chapter"><span>Gravitation</span></a></li>
-        <li><a href="/chapter"><span>Simple Harmonics Motion</span></a></li>
-        <li><a href="/chapter"><span>Fluid Mechanics</span></a></li>
-        <li><a href="/chapter"><span>Some Mechanical Properties of Matter</span></a></li>
-        <li><a href="/chapter"><span>Wave Motion and Waves on a String</span></a></li>
-        <li><a href="/chapter"><span>Sound Waves</span></a></li>
-        <li><a href="/chapter"><span>Light Waves</span></a></li>
-        <li><a href="/chapter"><span>Geometrical Optics</span></a></li>
-        <li><a href="/chapter"><span>Optical Instruments</span></a></li>
-        <li><a href="/chapter"><span>Dispersion and Spectra</span></a></li>
-        <li><a href="/chapter"><span>Speed of Light</span></a></li>
-        <li><a href="/chapter"><span>Photometry</span></a></li> -->
       </ul>
     </div>
   </div>
-  <div class="col-md-1 q_div">
-    <div class="" style="position:relative;overflow:hidden;width:100%;">
-      <ul class="list-unstyled q_list" style="overflow:auto;width:126%;overflow-x:hidden;">
-        <li ng-repeat="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" ng-click="toTheTop($index)"><span class="q_no">q{{i}}</span>
-          <div class="question">
+  <div class="col-md-1 q_div hidden-xs hidden-sm">
+    <div class="" style="overflow: hidden;width:99%;">
+      <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 126%;overflow-x:hidden;">
+        {% for q in questions %}
+        <li ng-click="toTheTop({{forloop.counter}})"><span class="q_no">q{{ forloop.counter }}</span>
+          <!-- <div class="question">
             <div class="" style="padding:20px;">
-              <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+              <span>Lorem ipsum dolor sit amet, consectua. Utti ea commodom.</span>
             </div>
-          </div>
+          </div> -->
+          {% endfor %}
         </li>
       </ul>
     </div>
   </div>
-  <div class="col-md-9 col-md-offset-3 solution_div" style="background-color:#e8e8e8">
-    <a class="btn" ng-click="signin()">sign in</a>
+
+
+  <div class="col-sm-12">
+    <div class="col-sm-6 pull-right menu_list_div hidden-md hidden-lg" ng-show="menu">
+      <div class="logoeffect">
+        <a href="/"> <img src="/static/images/24tut/white24.png" width="70%"></a>
+      </div>
+      <div class="" style="background: rgba(0,0,0,.05);padding: 10px 15px;color: #fff;">
+        <h4>OTHER CHAPTERS</h4>
+      </div>
+      <div id="leftSection" class="" style="padding-left:0px;padding-right:0px;overflow: hidden;width:99%;">
+        <ul class="list-unstyled other_chap">
+          {% for sec in sections %}
+          {% if sectionobj.shortUrl == sec.shortUrl %}
+          <li id="activeli" class="activeli"><a class="activea" ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
+          {% else %}
+          <li><a ui-sref="chapter({chapterName: '{{sec.shortUrl}}' })"><span>{{sec.title}}</span></a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-2 menu_q_div hidden-md hidden-lg" ng-show="menu">
+      <div class="" style="overflow: hidden;width:99%;">
+        <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 126%;overflow-x:hidden;">
+          {% for q in questions %}
+          <li ng-click="toTheTop({{forloop.counter}})"><span class="q_no">q{{ forloop.counter }}</span>
+            {% endfor %}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-9 col-md-offset-3 solution_div" style="background-color:#e8e8e8;">
+
+
+    <div class="col-md-12 top_header">
+      <div class="hidden-md hidden-lg" style="padding-top:10px;">
+        <div class="user" id="flybtn" ng-click="signin()">
+          <i class="fa fa-user" aria-hidden="true" style="position:fixed;top:13px;right:70px;font-size:30px;color:#eee;cursor:pointer;"></i>
+        </div>
+        <button type="button" class="btn btn-default pull-right show_menu" id="flybtn1" ng-click="show_menu()">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </button>
+      </div>
+      <!-- <img src="" width="100%"style="z-index:-100;opacity:0.5;;left:0;top:0;"> -->
+
+      <div class="col-md-2 mobileview">
+        <img src="/static/images/24tut/hcv.jpg" class="tb_image">
+      </div>
+      <div class="col-md-6 heading_24">
+        <h1> {{sectionobj.title}} </h1>
+        <h2>{{book.title}}</h2>
+        <h3>-{{book.author}}</h3>
+      </div>
+
+      <button class="btn btn-primary pull-right sign_btn" ng-click="signin()">sign in</button>
+    </div>
     <!-- <div ng-show="displ">
       <span>Q{{idx}}</span>
-    </div> -->
-    <div class="container-fluid">
-      {% for q in questions %}
-      <div class="row" >
-        <p style="font-size:17px;padding-left:15px"><strong>{{ forloop.counter }}.</strong> &nbsp; {{q.ques | safe}}</p>
+    </div>  -->
+    <div class="col-md-12 q_main_div">
+      <div class="container-fluid q_container" ng-init="initiateMath()">
+        {% for q in questions %}
+        <div id="q{{ forloop.counter }}" class="col-md-12 min_padd q_box">
+          <i class="fa fa-bookmark bkmrk" aria-hidden="true"></i>
+          <p class="qes"><strong style="border-right:1px solid #eee;padding-right:10px;float:left;">{{ forloop.counter }}</strong> &nbsp; <span class="ques"><strong>{{q.ques | safe}}</strong></span>
+          </p>
+          <div class="row" style="padding-left:30px;width:90%;">
+            {% for qp in q.quesParts.all %}
+            <!-- <p class="qes">{{qp.txt | safe}}</p> -->
+            {% endfor %}
+          </div>
+          <h5 class="text-primary" style="padding-top: 10px;padding-bottom: 10px;padding-left:15px"><strong>Solution :</strong> </h5>
+          <div class="col-md-10" style="padding-left:30px;width:90%; word-wrap: break-word; ">
+            {% for sp in q.solutionParts.all %}
+            <!-- <p class="qes">{{sp.pk}} {{sp.txt | safe}}</p> -->
+            {% endfor %}
+          </div>
+        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
     </div>
+
   </div>
 
 </div>
