--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8">
 <link rel="stylesheet" href="{% static 'css/rzslider.min.css' %}" charset="utf-8">
 <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}" charset="utf-8">
+<link rel="stylesheet" href="{% static 'css/angular-chart.min.css' %}" charset="utf-8">
 <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
@@ -38,6 +39,8 @@
 <script src="{% static 'js/app.homepage.js' %}"></script>
 <script src="{% static 'js/datetimepicker.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
+<script src="{% static 'js/Chart.min.js' %}"></script>
+<script src="{% static 'js/angular-chart.min.js' %}"></script>
 <script src="{% static 'js/custom/filters.js' %}"></script>
 
 
