--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -50,7 +50,7 @@
 
 
     {% verbatim %}
-    <div id="sideMenu" style="background:linear-gradient(100deg, #e9dddd 0%, #fff 51%, #fff 75%);width:{{sideMenuVisibility ? '13':'5'}}%;{{mobileView ? 'width:31%': ';'}};min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100;" class="sideMenuView" ng-include="sideMenu">
+    <div id="sideMenu" style="background: var(--themeMain);width:{{sideMenuVisibility ? '13':'5'}}%;{{mobileView ? 'width:31%': ';'}};min-height:100vh;position:fixed;z-index:100;" class="sideMenuView" ng-include="sideMenu">
     </div>
 
     <div class="col-md-1 mainUIViewParent animateWidthChange" id="mainUIParent" style="overflow-x: hidden;{{sideMenuVisibility ? 'width:87%': 'width:95%;'}};{{mobileView ? 'width:70%': ';'}};padding:0px;right:0px;position:absolute;">
