--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2059,7 +2059,346 @@ hr {
   border: none;
 }
 
+.video_card a {
+  cursor: pointer;
+  color: #000;
+  text-decoration: none;
+}
 
+.video_card:hover a {
+  color: rgb(93, 114, 254)
+}
+
+/* exams css properties */
+.selected {
+  background-color: #D6F1FB;
+}
+
+.notview {
+  width: 35px;
+  height: 35px;
+  background-color: #D2D2D2;
+  border-radius: 18px;
+  float: left;
+  margin: 1em 1em 1em 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.notview .numberalign, .reviewed .numberalign, .attemptreviewed .numberalign {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 35%;
+  top: 20%;
+}
+
+.notview .numberalign1, .reviewed .numberalign1, .attemptreviewed .numberalign1 {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 25%;
+  top: 20%;
+}
+
+.answered {
+  width: 35px;
+  height: 45px;
+  border-radius: 0;
+  margin-top: 0.3em;
+  background: #29B999;
+  position: relative;
+  float: left;
+  clip-path: polygon(50% 0%, 100% 38%, 100% 100%, 0 100%, 0% 38%);
+  cursor: pointer;
+}
+
+.answered .numberalign {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 35%;
+  top: 40%;
+}
+
+.answered .numberalign1 {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 25%;
+  top: 40%;
+}
+
+.notanswered {
+  width: 35px;
+  height: 45px;
+  border-radius: 0;
+  margin-top: 1em;
+  float: left;
+  position: relative;
+  background: #ED6060;
+  clip-path: polygon(52% 100%, 100% 68%, 100% 0, 0 0, 0 72%);
+  cursor: pointer;
+}
+
+.notanswered .numberalign {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 35%;
+  top: 20%;
+}
+
+.notanswered .numberalign1 {
+  color: #fff;
+  text-align: center;
+  font-size: 15px;
+  position: absolute;
+  left: 25%;
+  top: 20%;
+}
+
+.reviewed {
+  width: 35px;
+  height: 35px;
+  background-color: #565FB8;
+  border-radius: 18px;
+  float: left;
+  margin: 1em 1em 1em 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.attemptreviewed {
+  width: 35px;
+  height: 35px;
+  background-color: #565FB8;
+  border-radius: 18px;
+  float: left;
+  margin: 1em 1em 1em 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.attemptreviewed::after {
+  content: '\2713';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 75%;
+  right: 0;
+  background-color: #86D37C;
+  color: #fff;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  text-align: center;
+}
+
+.btns {
+  color: #38322A;
+  border: 1px solid #D2D2D2;
+  padding: 0.5em 3em;
+  width: 70%;
+  background-color: #fff;
+  margin-top: 1em;
+  border-radius: 2px;
+  font-size: 17px;
+}
+
+.btnaction {
+  color: #fff;
+  border: 0;
+  padding: 0.5em 2em;
+  background-color: #ED6060;
+  margin-top: 1em;
+  font-size: 17px;
+  width: 15%;
+  margin-left: 0.5em;
+  /* background-image: linear-gradient(90deg, #02EBA3, #6A7EF1, #873be7); */
+  border-radius: 5px;
+  border-top-left-radius: 25px;
+}
+
+.btnaction1 {
+  color: #fff;
+  border: 0;
+  padding: 0.5em 2em;
+  background-color: #565FB8;
+  margin-top: 1em;
+  font-size: 17px;
+  width: 15%;
+  margin-left: 0.5em;
+  /* background-image: linear-gradient(90deg, #02EBA3, #6A7EF1, #873be7); */
+  border-radius: 5px;
+  border-top-left-radius: 25px;
+}
+
+/* .btnaction:hover {
+  background-color: #25B5E9;
+  color: #fff;
+} */
+.headbtn {
+  color: #fff;
+  padding: 0.5em 2em;
+  border: 0;
+  background-color: #25B5E9;
+  margin-top: 1em;
+  font-size: 17px;
+  width: 15%;
+  margin-left: 0.5em;
+  /* background-image: linear-gradient(90deg, #02EBA3, #6A7EF1, #873be7); */
+  border-radius: 5px;
+  border-top-left-radius: 25px;
+}
+
+.savebtn {
+  color: #fff;
+  padding: 0.5em 2em;
+  border: 0;
+  background-color: #29B999;
+  margin-top: 1em;
+  font-size: 17px;
+  width: 15%;
+  margin-left: 0.5em;
+  /* background-image: linear-gradient(90deg, #02EBA3, #6A7EF1, #873be7); */
+  border-radius: 5px;
+  border-top-left-radius: 25px;
+}
+
+.savebtn:hover, .btnaction:hover {
+  /* background-image: linear-gradient(to right, #873be7, #6A7EF1, #02EBA3); */
+  transition: all .200s ease-in-out;
+}
+
+.maindiv {
+  padding: 2em 2em 2em 2em;
+}
+
+.queanswer {
+  padding-top: 2em;
+  border-bottom: 1px solid #D2D2D2;
+  padding-bottom: 4em;
+}
+
+.btn-section {
+  margin-top: 20em;
+  border-top: 1px solid #D2D2D2;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.answers {
+  padding: 1em;
+}
+
+.headsection {
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+  position: fixed;
+  top: 3.6em;
+  z-index: 99;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+
+.aligntotext1 {
+  font-size: 17px;
+}
+
+.aligntotext {
+  font-size: 17px;
+  margin-left: 0.5em
+}
+
+.fromtop {
+  margin-top: 30em;
+}
+
+.center-align {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  /* display:inline-block; */
+}
+
+.tocenter {
+  display: inline-block;
+}
+
+.adjustwidth {
+  width: 30%;
+}
+
+.leftalign {
+  left: 27em;
+}
+
+.pyl {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 8px;
+  padding-left: 0px;
+  padding-top: 10px;
+}
+
+.pyl img {
+  width: 100%;
+}
+
+.pyl div:first-child {
+  padding: 0px;
+}
+
+.pyl:hover {
+  transform: scale(1.02);
+}
+
+.banner {
+  display: none;
+}
+
+.video_title div:nth-child(2) {
+  text-align: right;
+}
+
+.comment_area {
+  display: block;
+  box-sizing: padding-box;
+  overflow: hidden;
+  padding: 10px;
+  width: 100%;
+  font-size: 14px;
+  border-radius: 6px;
+  box-shadow: 2px 2px 8px rgba(black, .3);
+  border: 0;
+  resize: none;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.comments_min_padding {
+  padding: 10px !important;
+}
+
+.cmnt {
+  min-height: 10vh;
+}
+
+.md_width {
+  width: 5.333%;
+}
+
+.subcmnt {
+  padding: 0px;
+  padding-left: 3em;
+}
+
+/* exams css properties */
 /* for normal screens ends here.... */
 @media only screen and (device-width: 1352px) and (device-height: 641px) {
 
@@ -2465,12 +2804,6 @@ hr {
   min-height: 450px;
 }
 
-input {
-  /* position: relative;
-  width: 100%; */
-  border-top-left-radius: 15px !important;
-}
-
 /* .video-border {
   display: flex;
   width: 100px;
@@ -2488,6 +2821,46 @@ input {
 
   /* mobile display size starts here.... */
   /* courses */
+  .video_card {
+    border-right: 0px solid #bebebe;
+    border-bottom: 1px solid #bebebe;
+  }
+
+  .video_title div:nth-child(2) {
+    text-align: left;
+  }
+
+  .pyl {
+    margin-top: 10px;
+    padding: 0px;
+  }
+
+  .pyl div:first-child {
+    padding: 10px;
+  }
+
+  .pyl img {
+    width: 113px;
+    height: 120px;
+  }
+
+  .subcmnt {
+    padding-left: 2em;
+    padding-right: 1em;
+  }
+
+  .md_width {
+    width: 16.55%;
+  }
+
+  .cmnt {
+    min-height: 14vh;
+  }
+
+  .mob {
+    padding: 0px !important;
+  }
+
   .blog_container, .sec2Left, .sec1Right {
     flex-direction: column !important;
     -webkit-flex-direction: column !important;
