--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -530,6 +530,24 @@ body {
   padding-bottom:10px;
   box-shadow: 0px 2px 8px rgba(26, 24, 20, 0.2);
 }
+
+.nameSmallCard{
+  border:1px solid var(--themeMain);
+  border-radius:5px;
+  margin:20px 30px;
+  padding:15px;
+  text-align:center;
+  color: var(--themeMain);
+  background-color: #fff;
+  position:relative;
+  }
+
+.teamCard{
+  margin: 0px 30px 20px 0px;
+  background-color:var(--themeMain);
+  color:white ;
+  border-radius:5px;
+}
 /*/ customAlert */
 .alert.customAlert {
   background-color: #fafafa;
