--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -226,10 +226,14 @@
     <script src="{% static 'js/jquery.orgchart.min.js' %}"></script>
     <!-- Custom JS files -->
     <script type="text/javascript">
+
       var wampServer = '{{wampServer}}';
       var wampBindName = "{{user.username}}";
       var BRAND_LOGO = "{{BRAND_LOGO}}";
       var SOURCE_LIST = {{sourceList|safe}};
+      var SHOW_COMMON_APPS = '{{commonApps}}';
+      var DEFAULT_STATE = '{{defaultState}}';
+
     </script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
     <script src="{% static 'js/custom/nativeJS.js' %}"></script>
