--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -532,19 +532,19 @@ body {
 }
 
 .nameSmallCard{
-  border:1px solid var(--themeMain);
+  border:1px solid var(--headerNavbarHighlight);
   border-radius:5px;
   margin:20px 30px;
   padding:15px;
   text-align:center;
-  color: var(--themeMain);
+  color: var(--headerNavbarHighlight);
   background-color: #fff;
   position:relative;
   }
 
 .teamCard{
   margin: 0px 30px 20px 0px;
-  background-color:var(--themeMain);
+  background-color:var(--headerNavbarHighlight);
   color:white ;
   border-radius:5px;
 }
