--- a/ecommerce/templates/app.ecommerce.newUserEmail.html
+++ b/ecommerce/templates/app.ecommerce.newUserEmail.html
@@ -54,7 +54,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                     <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:300px;">
                         <tr>
                             <td align="left" valign="top" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;" class="mobile-center">
-                                <h3 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff;">BNI Global Store</h3>
+                                <h3 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff;">{{brandName}}</h3>
                             </td>
                         </tr>
                     </table>
@@ -85,7 +85,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                        <tr>
                         <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px; padding-bottom: 15px; border-bottom: 3px solid #eeeeee;">
                             <h4 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;">
-                               {{user.firstName}} {{user.lastName}} has just created an account on BNI Global Store.
+                               {{user.firstName}} {{user.lastName}} has just created an account on {{brandName}} Store.
                             </h4>
 
                         </td>
@@ -114,7 +114,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                             <td style="font-size: 15px;"> mobile OTP: {{user.mobileOTP}} </td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;"> password: {{user.password}}} </td>
+                            <td style="font-size: 15px;"> password: {{user.password}} </td>
                         </tr>
                         <tr>
                             <td style="font-size: 15px;"> phone: {{user.mobile}} </td>
