--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2073,7 +2073,8 @@ hr {
   padding-right: 0px;
   padding-top: 0px;
 }
-.mob img{
+
+.mob img {
   width: 135px;
   height: 128px;
 }
@@ -2458,6 +2459,61 @@ hr {
   padding-left: 3em;
 }
 
+.bill_div label {
+  color: #999999;
+}
+
+.summary_div {
+  background: #fff;
+  padding: 15px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  padding-bottom: 0px;
+  margin-bottom: 10px;
+}
+
+.pay_card {
+  padding-left: 5px;
+  padding-right: 6px;
+  border-radius: 7px;
+}
+
+.pay_card h5 {
+  font-size: 13px !important;
+}
+
+.pay_card div:nth-child(2) {
+  padding-left: 40px;
+}
+
+.priced_items {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.abt_div h5 {
+  line-height: 1.5;
+}
+
+.method_row div {
+  border: 1px solid #eee;
+  width: 199px;
+  height: 165px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.method_row div:hover {
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.method_row div:last-child {
+  background-color: #fff;
+  cursor: default;
+}
+
 /* exams css properties */
 /* for normal screens ends here.... */
 @media only screen and (device-width: 1352px) and (device-height: 641px) {
@@ -2588,6 +2644,18 @@ hr {
     padding-left: 7px;
   }
 
+  .pay_card img {
+    width: 55px;
+  }
+
+  .pay_card h5 {
+    font-size: 12px !important;
+  }
+
+  .pay_card div:nth-child(2) {
+    padding-left: 25px;
+  }
+
   /*  non hd screen ends here*/
 }
 
@@ -2639,6 +2707,15 @@ hr {
   .col_hd_12 {
     width: 84vw;
     margin-left: 8%;
+  }
+
+  .price_box {
+    width: 22%;
+    margin-left: 10%;
+  }
+
+  .abt_div {
+    width: 28%;
   }
 
   /* for hd screens ends here.... */
@@ -3879,6 +3956,18 @@ hr {
     top: 9px;
     right: 60px;
     z-index: 7;
+  }
+
+  .pay_card {
+    margin-bottom: 10px;
+  }
+
+  .pay_card div:nth-child(2) {
+    padding-left: 25px;
+  }
+
+  .pay_card img {
+    width: 55px;
   }
 
   /* mobile screen size ends here.... */
