--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -126,6 +126,17 @@
   <script src="{% static 'js/app.homepage.main.js' %}"></script>
 
 
+<script src="https://syrow.cioc.in/script/chatter-Vhe9xtVRyD0hEkle5q6Yja09z1FadV6da2e+X8xtaiw=.js"></script>
+
+<script>
+
+document.addEventListener('DOMContentLoaded', function() {
+  console.log('document - DOMContentLoaded - capture'); // 2nd
+
+	setVisitorDetails("RR Syrow", "9898323299", "rr@syrow.com");
+
+}, true);
 
 
+</script>
 {% endblock %}
