--- a/homepage/templates/contacts.html
+++ b/homepage/templates/contacts.html
@@ -72,7 +72,7 @@
                         <span style="color:white;font-size:25px"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                       </div>
                       <div class="col-md-7">
-                        <span style="color:white;font-size:15px">4th Floor, Venkateshwara Heritage,Kudlu Hosa Road, Opp Sai Purna Premium Apartment,</span><br>
+                        <span style="color:white;font-size:15px"></span><br>
                         <span style="color:white;font-size:15px">Sai Meadows Kudlu,Bengaluru,</span><br>
                         <span style="color:white;font-size:15px">Karnataka 560068</span>
                       </div>
@@ -101,7 +101,7 @@
                       </div>
                       <div class="row" style="padding:10px">
                         <div class="col-md-12">
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.3496240573213!2d77.65382111421069!3d12.885225720255487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1355d65f4703%3A0x85053037befdb9b6!2sCIOC+FMCG+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1521715410797" width="500" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                         
                         </div>
                       </div>
                     </div>
