pushing for pull

--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -1,3 +1,9 @@
+{% extends "tutorBase.html" %}
+
+{% block tutorcontent %}
+
+{% verbatim %}
+
 <div class="">
   <div class="row" style="margin:0px;">
     <style>
@@ -365,3 +371,6 @@
     </div>
   </div>
 </div>
+
+{% endverbatim %}
+{% endblock %}
