--- a/homepage/templates/loginCenter.html
+++ b/homepage/templates/loginCenter.html
@@ -29,11 +29,7 @@
 <link href="{% static 'css/agency.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8">
 <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" charset="utf-8">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %}
-
-
-
-{% endblock %}
+<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} 
 {% block content %}
 <div ng-app="app" ng-controller="main">
   <div class="body"style="padding-top:20px;">
