--- a/libreERP/templates/base.html
+++ b/libreERP/templates/base.html
@@ -15,6 +15,7 @@
   <body id="page-top" class="index">
       {% block header %}{% endblock %}
       {% block content %}{% endblock %}
+      {% block tutorbookcontent %}{% endblock %}
       {% block footer %}{% endblock %}
 
       <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
