--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -528,7 +528,8 @@ body {
 .card{
   display: block;
   padding-bottom:10px;
-  box-shadow: 0px 2px 8px rgba(26, 24, 20, 0.2);
+  box-shadow: 0px 1px 2px rgba(26, 24, 20, 0.2);
+  background: #f8f8f8;
 }
 
 .nameSmallCard{
